--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "mongoose": "^7.6.3"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "nodemailer": "^7.0.3"
   }
 }
